Remove legacy options