@@ -4,7 +4,6 @@
 -Dfile.encoding=UTF-8
 -Dclient.encoding.override＝UTF-8
 -Djava.net.preferIPv4Stack=true
--XX:+UseStringCache
 -client
 -XX:+HeapDumpOnOutOfMemoryError
 -XX:-PrintClassHistogram
@@ -12,8 +11,6 @@
 -XX:+PrintCommandLineFlags
 -XX:+PreserveFramePointer
 -XX:-CMSClassUnloadingEnabled
--XX:+HeapDumpOnCtrlBreak
 -XX:+HeapDumpOnOutOfMemoryError
--XX:MaxPermSize=512M
 -XX:CMSInitiatingOccupancyFraction=90
 -XX:MaxHeapFreeRatio=90
